[package]
name = "bevy_dolly"
version = "0.0.3"
authors = ["Black Phlox <bphlox@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/BlackPhlox/bevy_dolly"
documentation = "https://docs.rs/bevy_dolly"
description = "The dolly abstraction layer for the bevy game framework"
keywords = ["gamedev", "bevy", "camera", "fps", "3d"]
categories = ["game-development", "game-engines"]
exclude = ["assets/*", ".github/*"]

[profile.dev]
opt-level = 3

[lib]
name = "bevy_dolly"

[features]
default = ["drivers", "helpers"]
drivers = []
helpers = ["dep:leafwing-input-manager", "bevy/bevy_pbr"]

[dependencies]
dolly = { path = "dolly", default-features = false }
leafwing-input-manager = { version = "0.13", optional = true }

[dependencies.bevy]
version = "0.13"
features = ["bevy_render", "bevy_asset"]
default-features = false

[dev-dependencies]
leafwing-input-manager = "0.13"

[dev-dependencies.bevy]
version = "0.13"
features = [
    "bevy_core_pipeline",
    "bevy_asset",
    "bevy_scene",
    "bevy_pbr",
    "bevy_winit",
    "bevy_gltf",
    "bevy_sprite",
    "png",
    "ktx2",
    "zstd",
    "tonemapping_luts",
    "bevy_gizmos",
]
default-features = false

[target.'cfg(target_os = "linux")'.dev-dependencies.bevy]
version = "0.13"
features = ["x11", "wayland"]
default-features = false
